--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -2,8 +2,18 @@ name: Events Demo 1
 on:
   pull_request:
     types: [opened, edited]
+    branches:
+      - main
   workflow_dispatch:
-  
+  push:
+    branches:
+      - main
+      - 'dev-*'
+      - 'feat/**'
+    path-ignore:
+      - '.github/workflows/*'
+
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
